UI: Fixed %amp;

--- a/www-public/index.html
+++ b/www-public/index.html
@@ -481,8 +481,8 @@
               $("#KeyTable").append(`
                     <tr>
                         <td title="${PossibleKeyStatusText[keystatus[i].status - 1]}" >${PossibleKeyStatus[keystatus[i].status - 1]}</td>
-                        <td>${keystatus[i].name?.split("")?.join("​")}</td>
-                        <td style="color: ${getColor(keystatus[i].keys_success / key)} !important" title="${vote_rate} of this users keys worked.">${keystatus[i].owner?.split("")?.join("​")} (${vote_rate})</td>
+                        <td>${keystatus[i].name?.replaceAll('&amp;', '&').split("")?.join("‎​")}</td>
+                        <td style="color: ${getColor(keystatus[i].keys_success / key)} !important" title="${vote_rate} of this users keys worked.">${keystatus[i].owner?.split("")?.join("‎​")} (${vote_rate})</td>
                         <td>${getButtons(keystatus[i].id, keystatus[i].status, keystatus[i].owner, keystatus[i].giftaccess)}</td>
                     </tr>
               `);
